          CHANGES IN SOUNDGEN VERSION 2.0.1 [--date--]
NEW FUNCTIONS:
  * shiftFormants(): raises or lowers formants without changing the pitch

MINOR
  * switch from Seeing Speech to Hillenbrand 1995 for vowel centroids in formant_app()

BUGS FIXED:
  * formant_app(): vowel plot, VTL updated in output table


          CHANGES IN SOUNDGEN VERSION 2.0.0 [15-March-2021]
This version represents an attempt to standardize and better integrate all functions for acoustic analysis in the package. Functions for sound synthesis, notably soundgen(), are not affected by these structural changes and remain fully back-compatible.

GLOBAL (seriously affects back-compatibility):
  * Functions analyzeFolder(), spectrogramFolder(), segmentFolder(), modulationSpectrumFolder(), getRMSFolder(), getLoudnessFolder() are deprecated.
  * Instead, analyze(), spectrogram(), osc(), segment(), modulationSpectrum(), getRMS(), getLoudness(), ssm(), playme(), etc. accept as input either a single sound (numeric vector, Wave object, or filename) or multiple sounds (a list of vectors or Wave objects, multiple filenames like "c(file1, file2)"", or path to folder with audio files).
  * Functions for acoustic analysis return lists with both detailed results and summaries; for example, analyze() returns a list with two components: "$detailed" (frame-by-frame acoustic measures, one dataframe per file) and "$summary" (summaries based on "summaryFun", one row per file).
  * Harmonized terminology throughout the package for basic arguments like "from", "to", saving plots ("savePlots") and audio ("saveAudio"), reporting estimated time left ("reportEvery"), etc.

MAJOR (affects back-compatibility)
  * segment(): a new segmentation algorithm based on spectral signal-noise separation, several deprecated and several new arguments, support for long files (>1 h of audio), an option to export detected syllables as separate files, etc.