@@ -29,10 +29,11 @@ soundgen:::reformatAnchors(anchors = list(time = c(0, 10, 100),
                                           value = c(150, 200, 220)))
 # returns NA
 soundgen:::reformatAnchors('aha')
+\dontrun{
 # returns NA with a warning
 soundgen:::reformatAnchors(anchors = list(time = c(0, .1, 1),
                                           freq = c(150, 200, 220)))
-\dontrun{
+
 # throws a warning and rearranges in order of time stamps
 soundgen:::reformatAnchors(anchors = list(time = c(0, .8, .7, 1),
                                           value = c(150, 200, 150, 220)))
